add project build command

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,8 @@
 
     <title>Video Room</title>
 
-    <link rel="icon" href="video-camera-icon.png" />
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="./static/video-camera-icon.png" />
+    <link rel="stylesheet" href="./static/styles.css">
 
   </head>
 
