--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
 
     <div class="container centralized column">
       <h1 id="video-title">-</h1>
-      <video id="video" controls></video>
+      <video id="video" controls loop></video>
     </div>
 
     <div class="container centralized row expand-x my-1 gap-1 botton">
